# mes-ubuntu

./: .gitignore  SOP.rar  check_rendered_html.py  debug_sop_menu.py  diagnose_sop_layout.py  local_dev_setup.md  temp_upload.html  test_sop_layout.html  生产可视化SOP系统需求说明书.docx
qrmes-feishu-bot-main/: .env.example  .env.template  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
qrmes-feishu-bot-main/docs/: FEISHU_APP_SETUP.md
qrmes-feishu-bot-main/feishu_mes_bot/: bot_app.py  config.py  long_connection.py  main.py  message_parser.py  models.py  runtime.py  security.py  service_factory.py
qrmes-feishu-bot-main/scripts/: deploy_local.sh  healthcheck.sh  qrmes-feishu-bot.service  status_local.sh  verify_integration.sh
qrmes-feishu-bot-main/tests/: test_deployment_files.py  test_diagnosis_summary.py  test_feishu_file_service.py  test_hermes_api_service.py  test_hermes_factory.py  test_issue_diagnosis_service.py  test_long_connection.py  test_message_parser.py  test_message_parser_extended.py  test_message_resource_parser.py  test_mode_dispatch.py  test_probe_service.py  test_resource_enrichment.py  test_router.py  test_security.py  test_sqlite_targeted_diagnosis.py
qrmes-kingdee-integration-main/: .env.example  .gitignore  README.md  deploy.sh  pyproject.toml  requirements.txt  start.sh  status.sh  stop.sh
qrmes-kingdee-integration-main/docs/: interface-checklist.md  kingdee-material-serial-key-plan.md  material-traceability-bos-fields-final.md  material-traceability-formid-plan.md  material-traceability-kingdee-custom-fields.md  material-traceability-kingdee-field-reuse.md  material-traceability-pdf-extract.md  (+5 more)
qrmes-shared-core-main/: .gitignore  .gitlab-ci.yml  README.md  README_RUNTIME.md  pyproject.toml  requirements.txt
(+836 files in other folders)
