[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrmes-shared-core"
version = "0.1.0"
description = "Shared core utilities extracted from mes_ubuntu/app_web"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask==2.3.3",
  "requests==2.31.0",
  "pysmb==1.2.9.1",
  "bcrypt==4.1.2"
]

[tool.setuptools]
packages = ["qrmes_shared_core"]
